make sure new handlers are added to git

--- a/iceprod/website/data/www_templates/submit.html
+++ b/iceprod/website/data/www_templates/submit.html
@@ -65,7 +65,7 @@
         {% end %}
     </div>
 </div>
-<div id="error"></div>
+<div id="error">{{ error }}</div>
 {% end %}
 
 {% block body_scripts %}
