--- a/iceprod/website/data/www_templates/submit.html
+++ b/iceprod/website/data/www_templates/submit.html
@@ -45,7 +45,7 @@
 
 {% block body %}
 <div id="submit_area">
-    {% if not edit %}<form method="post">
+    {% if not edit %}<form method="post" action="/submit">
         {% module xsrf_form_html() %}{% end %}
         <textarea name="submit_box" id="submit_box" style="min-height: 500px">{{ json_encode(config, indent=2) }}</textarea>
         <textarea name="description" id="description" placeholder="Description">{{ description }}</textarea>
@@ -56,11 +56,11 @@
                 {% end %}
             {% else %}
             Number of jobs:
-            <input name="number_jobs" id="number_jobs" value="1" min="1" step="1" type="number">
+            <input name="number_jobs" id="number_jobs" value="{{ jobs_submitted }}" min="1" step="1" type="number">
             Group:
             <select name="group" id="group">
                 {% for g in groups %}
-                    <option value="{{ g }}">{{ g }}</option>
+                    <option value="{{ g }}" {% if g == group %}selected{% end %}>{{ g }}</option>
                 {% end %}
             </select>
             <button id="submit_action">Submit</button>
