--- a/iceprod/website/data/www_templates/submit_status.html
+++ b/iceprod/website/data/www_templates/submit_status.html
@@ -23,7 +23,10 @@
 {% end %}
 
 {% block body_scripts %}
+<script type="text/javascript">
+window.location.replace('/submit/status/{{ message_id }}');
 setTimeout(function() {
     location.reload();
 }, 1000);
+</script>
 {% end %}
