--- a/iceprod/website/data/www_templates/job_browse.html
+++ b/iceprod/website/data/www_templates/job_browse.html
@@ -70,7 +70,7 @@ async function service_worker(action, job_ids) {
 
         while (true) {
             const url = '/actions/job_status/'+id;
-            const ret = await fetch_json('GET', url, {}, passkey);
+            const ret = await fetch_json('GET', url, null, passkey);
             if (ret['status'] == 'error') {
                 if ('error_message' in ret) {
                     message_alert('error - '+ret['error_message']);
