--- a/iceprod/website/data/www_templates/task_detail.html
+++ b/iceprod/website/data/www_templates/task_detail.html
@@ -133,7 +133,7 @@ async function service_worker(action) {
 
         while (true) {
             const url = '/actions/task_status/'+id;
-            const ret = await fetch_json('GET', url, {}, passkey);
+            const ret = await fetch_json('GET', url, null, passkey);
             if (ret['status'] == 'error') {
                 if ('error_message' in ret) {
                     message_alert('error - '+ret['error_message']);
