Add services for resetting tasks, jobs, and datasets from the website (#480)
* add task status action

* add services for resetting tasks, jobs, and datasets from the website

* fix mypy and flake8

* update all website actions to use new service code

* fix dataset reset

* don't suspend the dataset when suspending tasks or jobs

* don't suspend the job when suspending tasks

* ignore complexity warning

--- a/iceprod/website/data/www_templates/job_browse.html
+++ b/iceprod/website/data/www_templates/job_browse.html
@@ -52,23 +52,37 @@ const job_ids_on_page = [
     {% end %}
     ];
 
-async function job_reset(job_ids) {
-    try {
-        {
-            const url = '/datasets/' + dataset_id + '/task_actions/bulk_reset';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
-                return false;
-            }
-        }
 
-        {
-            const url = '/datasets/' + dataset_id + '/job_actions/bulk_reset';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
+async function service_worker(action, job_ids) {
+    try {
+        const url = '/actions/job_status';
+        const args = {
+            dataset_id: dataset_id,
+            action: action,
+            job_ids: job_ids,
+        };
+        const ret = await fetch_json('POST', url, args, passkey);
+        if ('error' in ret) {
+            message_alert('error - '+ret['error']);
+            return false;
+        }
+        const id = ret['result'];
+
+        while (true) {
+            const url = '/actions/job_status/'+id;
+            const ret = await fetch_json('GET', url, null, passkey);
+            if (ret['status'] == 'error') {
+                if ('error_message' in ret) {
+                    message_alert('error - '+ret['error_message']);
+                } else {
+                    message_alert('error - '+action+' failed');
+                }
                 return false;
+            } else if (ret['status'] == 'complete') {
+                message('complete');
+                break;
+            } else if ('payload' in ret && 'progress' in ret['payload']) {
+                message('progress - '+ret['payload']['progress']+'%')
             }
         }
     } catch(err) {
@@ -77,60 +91,18 @@ async function job_reset(job_ids) {
     }
     reload();
     return true;
+}
+
+async function job_reset(job_ids) {
+    return await service_worker('reset', job_ids)
 }
 
 async function job_hard_reset(job_ids) {
-    try {
-        {
-            const url = '/datasets/' + dataset_id + '/task_actions/bulk_hard_reset';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
-                return false;
-            }
-        }
-
-        {
-            const url = '/datasets/' + dataset_id + '/job_actions/bulk_hard_reset';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
-                return false;
-            }
-        }
-    } catch(err) {
-        message_alert('error - '+err);
-        return false;
-    }
-    reload();
-    return true;
+    return await service_worker('hard_reset', job_ids)
 }
 
 async function job_suspend(job_ids) {
-    try {
-        {
-            const url = '/datasets/' + dataset_id + '/task_actions/bulk_suspend';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
-                return false;
-            }
-        }
-
-        {
-            const url = '/datasets/' + dataset_id + '/job_actions/bulk_suspend';
-            const ret = await fetch_json('POST', url, {'jobs': job_ids}, passkey);
-            if ('error' in ret) {
-                message_alert('error - '+ret['error']);
-                return false;
-            }
-        }
-    } catch(err) {
-        message_alert('error - '+err);
-        return false;
-    }
-    reload();
-    return true;
+    return await service_worker('suspend', job_ids)
 }
 {% end %}
 </script>
