--- a/iceprod/website/data/www_templates/task_browse.html
+++ b/iceprod/website/data/www_templates/task_browse.html
@@ -52,13 +52,37 @@ const task_ids_on_page = [
     {% end %}
 ];
 
-async function task_reset(task_ids) {
+async function service_worker(action, task_ids) {
     try {
-        const url = '/datasets/' + dataset_id + '/task_actions/bulk_reset';
-        const ret = await fetch_json('POST', url, {'tasks': task_ids}, passkey);
+        const url = '/actions/task_status';
+        const args = {
+            dataset_id: dataset_id,
+            action: action,
+            task_ids: task_ids,
+        };
+        const ret = await fetch_json('POST', url, args, passkey);
         if ('error' in ret) {
             message_alert('error - '+ret['error']);
             return false;
+        }
+        const id = ret['result'];
+
+        while (true) {
+            const url = '/actions/task_status/'+id;
+            const ret = await fetch_json('GET', url, null, passkey);
+            if (ret['status'] == 'error') {
+                if ('error_message' in ret) {
+                    message_alert('error - '+ret['error_message']);
+                } else {
+                    message_alert('error - '+action+' failed');
+                }
+                return false;
+            } else if (ret['status'] == 'complete') {
+                message('complete');
+                break;
+            } else if ('payload' in ret && 'progress' in ret['payload']) {
+                message('progress - '+ret['payload']['progress']+'%')
+            }
         }
     } catch(err) {
         message_alert('error - '+err);
@@ -66,38 +90,18 @@ async function task_reset(task_ids) {
     }
     reload();
     return true;
+}
+
+async function task_reset(task_ids) {
+    return await service_worker('reset', task_ids)
 }
 
 async function task_hard_reset(task_ids) {
-    try {
-        const url = '/datasets/' + dataset_id + '/task_actions/bulk_hard_reset';
-        const ret = await fetch_json('POST', url, {'tasks': task_ids}, passkey);
-        if ('error' in ret) {
-            message_alert('error - '+ret['error']);
-            return false;
-        }
-    } catch(err) {
-        message_alert('error - '+err);
-        return false;
-    }
-    reload();
-    return true;
+    return await service_worker('hard_reset', task_ids)
 }
 
 async function task_suspend(task_ids) {
-    try {
-        const url = '/datasets/' + dataset_id + '/task_actions/bulk_suspend';
-        const ret = await fetch_json('POST', url, {'tasks': task_ids}, passkey);
-        if ('error' in ret) {
-            message_alert('error - '+ret['error']);
-            return false;
-        }
-    } catch(err) {
-        message_alert('error - '+err);
-        return false;
-    }
-    reload();
-    return true;
+    return await service_worker('suspend', task_ids)
 }
 {% end %}
 </script>
