--- a/iceprod/website/data/www_templates/job_browse.html
+++ b/iceprod/website/data/www_templates/job_browse.html
@@ -52,6 +52,9 @@ const job_ids_on_page = [
     {% end %}
     ];
 
+function sleep(ms) {
+  return new Promise(resolve => setTimeout(resolve, ms));
+}
 
 async function service_worker(action, job_ids) {
     try {
@@ -69,6 +72,7 @@ async function service_worker(action, job_ids) {
         const id = ret['result'];
 
         while (true) {
+            await sleep(1000);
             const url = '/actions/job_status/'+id;
             const ret = await fetch_json('GET', url, null, passkey);
             if (ret['status'] == 'error') {
