--- a/iceprod/website/data/www_templates/submit_status.html
+++ b/iceprod/website/data/www_templates/submit_status.html
@@ -6,25 +6,25 @@
 <link rel="stylesheet" href="/static/submit.css" media="all" type="text/css" />
 {% end %}
 
-{% block page_title %}Submit Status{% end %}
+{% block page_title %}{% if submit %}Submit{% else %}Config{% end %} Status{% end %}
 
 
 {% block body %}
 <div style="margin: 1rem;max-width:40rem">
-    <p>Please wait while the dataset submission is processed.</p>
+    <p>Please wait while the dataset {% if submit %}submission{% else %}config update{% end %} is processed.</p>
     <img src="/static/Gray_circles_rotate.gif" style="width: 50px;margin: 1rem" />
     <p>Status: {{ status }}</p>
     {% if message %}
     <p>Message:</p>
     <div id="error">{{ message }}</div>
     {% end %}
-    <p style="margin-top:5rem">If the page does not reload every second, please manually reload. Dataset submission should normally take less than 10 seconds.</p>
+    <p style="margin-top:5rem">If the page does not reload every second, please manually reload. This should normally take less than 10 seconds.</p>
 </div>
 {% end %}
 
 {% block body_scripts %}
 <script type="text/javascript">
-window.location.replace('/submit/status/{{ message_id }}');
+window.location.replace('/{% if submit %}submit{% else %}config{% end %}/status/{{ message_id }}');
 setTimeout(function() {
     location.reload();
 }, 1000);
