--- a/iceprod/website/data/www_templates/submit.html
+++ b/iceprod/website/data/www_templates/submit.html
@@ -138,22 +138,23 @@ get_dataset_schema('{{ ver }}');
 {% end %}
 
 const submit_box = $('#submit_box');
-const description = $('#description');
+const submit_box_html5 = submit_box.get(0);
+const description = $('#description').get(0);
 submit_box.on('input', (event) => {
-    submit_box[0].setCustomValiditiy("");
+    submit_box_html5.setCustomValiditiy("");
     const submit_data = parse_json(submit_box.val());
-    if (!submit_box[0].validity.valid) {
+    if (!submit_box_html5.validity.valid) {
         return;
     }
     if (submit_data == null) {
-        submit_box[0].setCustomValidity("Cannot parse JSON");
+        submit_box_html5.setCustomValidity("Cannot parse JSON");
     }
     if (!validator(submit_data)) {
-        submit_box[0].setCustomValidity("Cannot validate config");
+        submit_box_html5.setCustomValidity("Cannot validate config");
     }
 })
 $('form').on("submit", (event) => {
-    if (!submit_box[0].validity.valid || !description[0].validity.valid) {
+    if (!submit_box_html5.validity.valid || !description.validity.valid) {
         // prevent form submission
         event.preventDefault();
     }
